--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "reactpf",
+  "homepage": "http://mikepfinnegan.com/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,10 +12,12 @@
   "dependencies": {
     "axios": "^1.3.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "he": "^1.2.0",
     "html-react-parser": "^3.0.16",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "nodemailer": "^6.9.3",
     "react": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "sort-by": "^1.2.0",
